final codes of the buildguard (frontend,backend and genai)