@@ -1,23 +1,19 @@
 package com.buildguard.service.impl;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.buildguard.dto.UserRequest;
 import com.buildguard.dto.UserResponse;
 import com.buildguard.entity.User;
-import com.buildguard.exception.DuplicateResourceException;
-import com.buildguard.exception.ResourceNotFoundException;
 import com.buildguard.mapper.UserMapper;
 import com.buildguard.repository.UserRepository;
 import com.buildguard.service.UserService;
 
 @Service
 public class UserServiceImpl implements UserService {
-
-    private static final String USER_NOT_FOUND = "User not found";
-    private static final String EMAIL_ALREADY_EXISTS = "Email already exists";
 
     private final UserRepository userRepository;
 
@@ -29,10 +25,11 @@ public class UserServiceImpl implements UserService {
     public UserResponse createUser(UserRequest request) {
 
         if (userRepository.existsByEmail(request.getEmail())) {
-            throw new DuplicateResourceException(EMAIL_ALREADY_EXISTS);
+            throw new RuntimeException("Email already exists");
         }
 
         User user = UserMapper.toEntity(request);
+
         User savedUser = userRepository.save(user);
 
         return UserMapper.toResponse(savedUser);
@@ -44,14 +41,14 @@ public class UserServiceImpl implements UserService {
         return userRepository.findAll()
                 .stream()
                 .map(UserMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
     public UserResponse getUserById(Long id) {
 
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
+                .orElseThrow(() -> new RuntimeException("User not found"));
 
         return UserMapper.toResponse(user);
     }
@@ -60,8 +57,9 @@ public class UserServiceImpl implements UserService {
     public void deleteUser(Long id) {
 
         User user = userRepository.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException(USER_NOT_FOUND));
+                .orElseThrow(() -> new RuntimeException("User not found"));
 
         userRepository.delete(user);
     }
+
 }
